--- a/module3/wsilknitter_module3.html
+++ b/module3/wsilknitter_module3.html
@@ -3,41 +3,36 @@
 <html lang='en'>
     <head>
 
-       <script>
+      <script>
 
-           const quote1 = "different";
+           const word1 = "hyperthyroidism";
 
-           const quote2 = "alone";
+           const word2 = "low blood sugar";
 
-           const quote3 = "choices";
+           const word3 = "Grave's Disease";
 
-       </script>
+      </script>
 
-       </head>
+      </head>
 
-       <body>
+      <body>
        
-        <p>
-           The flow of time is always cruel… Its speed seems <span id = "different"> _________
-        </span> for each person, but no one can change it… A thing that doesn’t change with time is a memory of younger days 
-        </p>
-        <p>
-            It’s dangerous to go <span id = "alone"> _____</span>, take this! 
-        </p>
-        <p>
-            We all make choices in life, but in the end our <span id = "choices"> ___________</span> make us.
-        </p>
+      <p>
+        Once upon a time I was very sick. I missed nearly four months of school, all because of <span id ="thyroid"> _____________
+      </span> issues. Doctors had no clue what was going on at the time, so I just dealt with it. I passed out at school and work multiple times, yet I was consistently told I had <span id="blood-sugar">_____________</span>.
+      We finally found a doctor who found out what was wrong with me. I had <span id="graves"> ____________</span> and an ulcer.
+      </p>
 
        <p>
 
            <button type="button"
-             onclick="document.getElementById('different').innerHTML = quote1">Different</button> <br />
+             onclick="document.getElementById('thyroid').innerHTML = word1">Thyroid</button> <br />
 
           <button type="button"
-            onclick="document.getElementById('alone').innerHTML = quote2">Alone</button> <br />
+            onclick="document.getElementById('blood-sugar').innerHTML = word2">Blood</button> <br />
 
           <button type="button"
-            onclick="document.getElementById('choices').innerHTML = quote3">Choices</button> <br />
+            onclick="document.getElementById('graves').innerHTML = word3">Graves</button> <br />
 
        </p>
 
