Completed module 4 assignment and updated index page.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- William Silknitter
 Prof Sampson
-Module 3
-Due October 31st, 2021--> 
+Module 4
+Due November 7th, 2021--> 
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,10 +18,8 @@ Due October 31st, 2021-->
         <h3>Module Assignments</h3>
         <ul>
             <li><a href="module3/wsilknitter_module3.html">Assignment 3</a></li>
+            <li><a href="module4/wsilknitter_module4.html">Assignment 4</a></li>
         </ul>
-        <!-- <h3>Projects</h3>
-        <ul>
-        </ul> -->
         <h4>Important Links</h4>
         <ul>
             <li><a href="https://bruinconnect.bellevue.edu/">Bruin Connect</a></li>
