Created module5 dir and file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Due November 7th, 2021-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>William Silknitter’s CSD 340 Landing Page</title>
+    <title>William Silknitter’s CSD 360 Landing Page</title>
     <link href="site.css" type="text/css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -19,6 +19,7 @@ Due November 7th, 2021-->
         <ul>
             <li><a href="module3/wsilknitter_module3.html">Assignment 3</a></li>
             <li><a href="module4/wsilknitter_module4.html">Assignment 4</a></li>
+            <li><a href="module5/wsilknitter_module5.html">Assignment 5</a></li>
         </ul>
         <h4>Important Links</h4>
         <ul>
